syntax = "proto3";

option java_outer_classname = "AdminProto";
option java_package = "model.protobuf";

import  "google/protobuf/timestamp.proto";

//查询管理员
message AdminRequest{
  string uuid = 1;
  string secret = 2;
}

message AdminResponse {
  Result result = 1;
  repeated AdminInfo adminList = 2;

  enum Result{
    SUCCESS = 0;
    FAILED = 1;
  }
}

message AdminInfo {
  uint32 adminId = 1;
  string adminName = 2;
  string adminContact = 3;
  google.protobuf.Timestamp adminLatestLoginTime = 5;
}
